Added writing results to excel file

--- a/mlp/requirements.txt
+++ b/mlp/requirements.txt
@@ -1,1 +1,7 @@
 # Python dependencies
+Numpy: pip install numpy
+Pandas: pip install Pandas
+Openpyxl:  pip install openpyxl
+
+# TO run
+py mlp_model.py
